"fix" Monaco editor overflow

--- a/redisinsight/ui/src/pages/browser/modules/key-details/components/rejson-details/styles.module.scss
+++ b/redisinsight/ui/src/pages/browser/modules/key-details/components/rejson-details/styles.module.scss
@@ -59,6 +59,8 @@
   letter-spacing: 0.15px;
   flex-grow: 1;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 
   input {
     width: 100%;
@@ -259,4 +261,11 @@
   height: 150px;
   width: 100%;
   max-width: none;
+}
+
+.editor, .editorWrapper {
+  // Using 99% instead of 100% to avoid a weird Monaco animation that kicks in at full height,
+  // which causes the editor to overflow its container.
+  // TODO: Find a cleaner fix for this.
+  height: 99% !important;
 }
